--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DATABASE = nodejs_login
+DATABASE = database_ie104
 DATABASE_HOST = localhost
 DATABASE_USER = root
-DATABASE_PASSWORD = 
-SESSION_SECRET = nhudang
+DATABASE_PASSWORD =
+SESSION_SECRET = secret
