--- a/package.json
+++ b/package.json
@@ -18,12 +18,24 @@
   },
   "homepage": "https://github.com/namtuthien/SE104.O11.Group6#readme",
   "dependencies": {
+    "api": "^6.1.1",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-flash": "^0.0.2",
+    "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
-    "mysql": "^2.18.1"
+    "express-validator": "^7.0.1",
+    "jsdom": "^22.1.0",
+    "method-override": "^3.0.0",
+    "mysql": "^2.18.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "sequelize": "^6.33.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
