--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-  "emmet.includeLanguages": {
-    "ejs": "html"
-  },
-  "[html]": {
-    "editor.defaultFormatter": "j69.ejs-beautify"
-  }
+    "liveServer.settings.port": 5501
 }
