--- a/package.json
+++ b/package.json
@@ -19,19 +19,12 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
-    "ejs-async": "^0.0.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "installable": "^0.2.8",
-    "jquery": "^3.7.1",
-    "jsonwebtoken": "^9.0.2",
-    "moment": "^2.29.4",
-    "mysql": "^2.18.1",
-    "status": "^0.0.13"
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
